[tool.poetry]
name = "api-concierge-lib"
version = "0.1.0"
description = ""
authors = ["Ben Kehoe <ben@kehoe.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
